syntax = "proto3";

option csharp_namespace = "gameapi";

service GetGameId{
	rpc GetGamesById (GetByIdRequest) returns (SendGameResponse);
}

message GetByIdRequest{
	string UserId = 1;
}

message  GameModel{
	int32 Id = 1;
	string Name = 2;
	string ImageUrl = 3;
	int32 Fullrating = 4;
	int32 rating = 5;
	int32 ratingcount =6;
}

message SendGameResponse{
	repeated GameModel game = 1;
}


